--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
   },
   "dependencies": {
     "@theme-ui/presets": "^0.3.0",
+    "dotenv-load": "^2.0.0",
     "next": "9.5.0",
+    "next-connect": "^0.8.1",
+    "next-env": "^1.1.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "theme-ui": "^0.3.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.27",
+    "@types/react": "^16.9.43",
+    "typescript": "^3.9.7"
   }
 }
