--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@theme-ui/presets": "^0.3.0",
+    "cors": "^2.8.5",
     "dotenv-load": "^2.0.0",
     "next": "9.5.0",
     "next-connect": "^0.8.1",
